--- a/prototypeApp/templates/adoption.html
+++ b/prototypeApp/templates/adoption.html
@@ -75,86 +75,89 @@
     </div>
 
     <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
-        const catsPerPage = 6;
-        let currentPage = 1;
-        let cats = [];
+ document.addEventListener('DOMContentLoaded', function() {
+    const csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+    const catsPerPage = 6;
+    let currentPage = 1;
+    let cats = [];
 
-        function updateFileLabel() {
-            const fileInput = document.getElementById('id_profile_picture');
-            const fileLabel = document.querySelector('.custom-file-label');
+    function updateFileLabel() {
+        const fileInput = document.getElementById('id_profile_picture');
+        const fileLabel = document.querySelector('.custom-file-label');
 
-            fileInput.addEventListener('change', function() {
-                const fileName = fileInput.files[0] ? fileInput.files[0].name : 'Choose file';
-                fileLabel.textContent = fileName;
+        fileInput.addEventListener('change', function() {
+            const fileName = fileInput.files[0] ? fileInput.files[0].name : 'Choose file';
+            fileLabel.textContent = fileName;
+        });
+    }
+
+    function fetchCats() {
+        fetch('/api/cats/')
+            .then(response => response.json())
+            .then(data => {
+                cats = data.filter(cat => !cat.in_review);
+                displayCats();
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Failed to load cats. Please try again.');
             });
-        }
+    }
 
-        function fetchCats() {
-            fetch('/api/cats/')
-                .then(response => response.json())
-                .then(data => {
-                    cats = data.filter(cat => !cat.in_review); // Filter out cats that are in review
-                    displayCats();
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('Failed to load cats. Please try again.');
-                });
-        }
+    function displayCats() {
+        const catList = document.getElementById('cat-list');
+        const pageInfo = document.getElementById('page-info');
+        const col1 = document.getElementsByClassName('cat-col-1')[0];
+        const col2 = document.getElementsByClassName('cat-col-2')[0];
+        col1.innerHTML = '';
+        col2.innerHTML = '';
 
-        function displayCats() {
-            const catList = document.getElementById('cat-list');
-            const pageInfo = document.getElementById('page-info');
-            const col1 = document.getElementsByClassName('cat-col-1')[0];
-            const col2 = document.getElementsByClassName('cat-col-2')[0];
-            col1.innerHTML = '';
-            col2.innerHTML = '';
-            
-            const totalPages = Math.ceil(cats.length / catsPerPage);
-            const start = (currentPage - 1) * catsPerPage;
-            const end = start + catsPerPage;
-            const catsToShow = cats.slice(start, end);
-            
-            catsToShow.forEach((cat, index) => {
-                const catItem = document.createElement('div');
-                catItem.className = 'cat-item';
-                catItem.innerHTML = `
-                    <div> <img src="${cat.profile_picture}" alt="${cat.name}" class="cat-image" style="width:150px; height:150px"></div>
-                    <div class="cat-details">
-                        <h2>${cat.name}</h2>
-                        <p><strong>Age:</strong> ${cat.age}</p>
-                        <p><strong>Breed:</strong> ${cat.breed}</p>
-                        <p><strong>Description:</strong> ${cat.description}</p>
-                        <p><strong>Submitted By:</strong> ${cat.submitted_by.username}</p>
-                        <form class="adopt-form" data-cat-id="${cat.id}">
-                            <input type="hidden" name="csrfmiddlewaretoken" value="${csrfToken}">
-                             {% if user.is_authenticated %}
-                                <button type="submit">Adopt</button>
-                            {% endif %}
-                        </form>
-                    </div>
-                `;
-                if (index % 2 === 0) {
-                    col1.appendChild(catItem);
-                } else {
-                    col2.appendChild(catItem);
-                }
-            });
+        const totalPages = Math.ceil(cats.length / catsPerPage);
+        const start = (currentPage - 1) * catsPerPage;
+        const end = start + catsPerPage;
+        const catsToShow = cats.slice(start, end);
 
-            pageInfo.textContent = `Page ${currentPage} of ${totalPages}`;
+        catsToShow.forEach((cat, index) => {
+            const catItem = document.createElement('div');
+            catItem.className = 'cat-item';
+            catItem.innerHTML = `
+                <div> <img src="${cat.profile_picture}" alt="${cat.name}" class="cat-image" style="width:150px; height:150px"></div>
+                <div class="cat-details">
+                    <h2>${cat.name}</h2>
+                    <p><strong>Age:</strong> ${cat.age}</p>
+                    <p><strong>Breed:</strong> ${cat.breed}</p>
+                    <p><strong>Description:</strong> ${cat.description}</p>
+                    <p><strong>Submitted By:</strong> ${cat.submitted_by.username}</p>
+                    <form class="adopt-form" data-cat-id="${cat.id}">
+                        <input type="hidden" name="csrfmiddlewaretoken" value="${csrfToken}">
+                        {% if user.is_authenticated %}
+                            <button type="submit">Adopt</button>
+                        {% endif %}
+                    </form>
+                </div>
+            `;
+            if (index % 2 === 0) {
+                col1.appendChild(catItem);
+            } else {
+                col2.appendChild(catItem);
+            }
+        });
 
-            document.getElementById('prev-page').disabled = currentPage === 1;
-            document.getElementById('next-page').disabled = currentPage >= totalPages;
+        pageInfo.textContent = `Page ${currentPage} of ${totalPages}`;
 
-            // Attach submit event listeners to adopt forms
-            document.querySelectorAll('.adopt-form').forEach(form => {
-                form.addEventListener('submit', function(e) {
-                    e.preventDefault();
+        document.getElementById('prev-page').disabled = currentPage === 1;
+        document.getElementById('next-page').disabled = currentPage >= totalPages;
 
-                    const catId = this.getAttribute('data-cat-id');
+        // Attach submit event listeners to adopt forms with confirmation
+        document.querySelectorAll('.adopt-form').forEach(form => {
+            form.addEventListener('submit', function(e) {
+                e.preventDefault();
 
+                const catId = this.getAttribute('data-cat-id');
+                
+    
+                const confirmAdopt = confirm("Are you sure you want to adopt this cat?");
+                if (confirmAdopt) {
                     fetch('/adopt/', {
                         method: 'POST',
                         headers: {
@@ -166,6 +169,7 @@
                     .then(response => {
                         if (response.ok) {
                             alert('Adoption request submitted!');
+                            fetchCats()
                         } else {
                             response.json().then(data => {
                                 alert(`Failed to submit adoption request: ${data.message}`);
@@ -176,40 +180,38 @@
                         console.error('Error:', error);
                         alert('An error occurred. Please try again.');
                     });
-                });
+                }
             });
-
-        }
-
-        function scrollToTopOfCatList() {
-            const catList = document.getElementById('cat-list');
-            catList.scrollIntoView({ behavior: 'smooth' });
-        }
-
-        // Pagination button event listeners
-        document.getElementById('prev-page').addEventListener('click', function() {
-            if (currentPage > 1) {
-                currentPage--;
-                
-            // Scroll to the top of the cat list
-                scrollToTopOfCatList();
-                displayCats();
-            }
         });
+    }
 
-        document.getElementById('next-page').addEventListener('click', function() {
-            if (currentPage < Math.ceil(cats.length / catsPerPage)) {
-                currentPage++;
-                
+    function scrollToTopOfCatList() {
+        const catList = document.getElementById('cat-list');
+        catList.scrollIntoView({ behavior: 'smooth' });
+    }
+
+    // Pagination button event listeners
+    document.getElementById('prev-page').addEventListener('click', function() {
+        if (currentPage > 1) {
+            currentPage--;
+
             // Scroll to the top of the cat list
-                scrollToTopOfCatList();
-                displayCats();
-            }
-        });
+            scrollToTopOfCatList();
+            displayCats();
+        }
+    });
 
-        // Initialize functionalities
-        fetchCats();
-        updateFileLabel();
+    document.getElementById('next-page').addEventListener('click', function() {
+        if (currentPage < Math.ceil(cats.length / catsPerPage)) {
+            currentPage++;
+            scrollToTopOfCatList();
+            displayCats();
+        }
+    });
+
+    // Initialize functionalities
+    fetchCats();
+    updateFileLabel();
     });
 
     </script>
